src/main/java/sky/redis/antlr/redisql_skyParser.java
// $ANTLR 3.4 /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g 2013-01-24 10:58:25

package sky.redis.antlr;
import java.util.*;
import sky.redis.data.model.*;
import sky.redis.core.*;
import sky.redis.exception.*;


import org.antlr.runtime.*;
import org.antlr.runtime.BitSet;

import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class redisql_skyParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "CONFIG", "CREATE", "FROM", "GROUP", "SELECT", "SET", "UPDATE", "VALUE", "WHERE", "WS", "','", "';'", "'='", "'counted'", "'create counter'", "'desc counter'", "'distinct filter'", "'excluded filter'", "'filter'", "'group filter'", "'insert'", "'main filter'", "'ttl filter'", "'ttl'", "'ttlsign'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int AND=4;
    public static final int CONFIG=5;
    public static final int CREATE=6;
    public static final int FROM=7;
    public static final int GROUP=8;
    public static final int SELECT=9;
    public static final int SET=10;
    public static final int UPDATE=11;
    public static final int VALUE=12;
    public static final int WHERE=13;
    public static final int WS=14;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public redisql_skyParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public redisql_skyParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return redisql_skyParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g"; }


    private RedisCreater creater=new RedisCreater();
    private RedisInsertor insertor=new RedisInsertor();
    private RedisUpdater updater=new RedisUpdater();
    private RedisSelecter selecter=new RedisSelecter();
    private RedisConfig config=new RedisConfig();
    private RedisCounterManager manager=new RedisCounterManager();



    // $ANTLR start "rule"
    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:32:1: rule : ( set_ttl_sign | set_ttl | desc | update | create | insert | select | config );
    public final void rule() throws FilterNotExistsException, DistinctFilterNotExistsException, MainFilterNotExistsException, RecognitionException, CounterNotExistsException, GroupFilterNotExistsException, CountedNotExistsException {
        try {
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:32:184: ( set_ttl_sign | set_ttl | desc | update | create | insert | select | config )
            int alt1=8;
            alt1 = dfa1.predict(input);
            switch (alt1) {
                case 1 :
                    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:32:186: set_ttl_sign
                    {
                    pushFollow(FOLLOW_set_ttl_sign_in_rule61);
                    set_ttl_sign();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:32:199: set_ttl
                    {
                    pushFollow(FOLLOW_set_ttl_in_rule63);
                    set_ttl();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:32:207: desc
                    {
                    pushFollow(FOLLOW_desc_in_rule65);
                    desc();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:32:212: update
                    {
                    pushFollow(FOLLOW_update_in_rule67);
                    update();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:32:219: create
                    {
                    pushFollow(FOLLOW_create_in_rule69);
                    create();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:32:226: insert
                    {
                    pushFollow(FOLLOW_insert_in_rule71);
                    insert();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:32:233: select
                    {
                    pushFollow(FOLLOW_select_in_rule73);
                    select();

                    state._fsp--;


                    }
                    break;
                case 8 :
                    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:32:240: config
                    {
                    pushFollow(FOLLOW_config_in_rule75);
                    config();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "rule"



    // $ANTLR start "desc"
    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:34:1: desc returns [String info] : ( WS )* 'desc counter' ( WS )+ name= VALUE ( WS )* ';' ;
    public final String desc() throws RecognitionException {
        String info = null;


        Token name=null;

        try {
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:34:26: ( ( WS )* 'desc counter' ( WS )+ name= VALUE ( WS )* ';' )
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:34:28: ( WS )* 'desc counter' ( WS )+ name= VALUE ( WS )* ';'
            {
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:34:28: ( WS )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==WS) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:34:28: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_desc85); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            match(input,20,FOLLOW_20_in_desc88); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:34:47: ( WS )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==WS) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:34:47: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_desc90); 

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            name=(Token)match(input,VALUE,FOLLOW_VALUE_in_desc95); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:34:62: ( WS )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==WS) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:34:62: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_desc97); 

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            match(input,16,FOLLOW_16_in_desc100); 


              info = manager.desc((name!=null?name.getText():null));


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return info;
    }
    // $ANTLR end "desc"



    // $ANTLR start "manager"
    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:38:1: manager : ( set_ttl | set_ttl_sign );
    public final void manager() throws RecognitionException {
        try {
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:38:9: ( set_ttl | set_ttl_sign )
            int alt5=2;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:38:11: set_ttl
                    {
                    pushFollow(FOLLOW_set_ttl_in_manager109);
                    set_ttl();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:38:19: set_ttl_sign
                    {
                    pushFollow(FOLLOW_set_ttl_sign_in_manager111);
                    set_ttl_sign();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "manager"



    // $ANTLR start "set_ttl"
    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:1: set_ttl : ( WS )* SET ( WS )* 'ttl' ( WS )* '=' time= VALUE ( WS )+ FROM ( WS )+ name= VALUE ( WS )* ';' ;
    public final void set_ttl() throws RecognitionException {
        Token time=null;
        Token name=null;

        try {
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:9: ( ( WS )* SET ( WS )* 'ttl' ( WS )* '=' time= VALUE ( WS )+ FROM ( WS )+ name= VALUE ( WS )* ';' )
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:11: ( WS )* SET ( WS )* 'ttl' ( WS )* '=' time= VALUE ( WS )+ FROM ( WS )+ name= VALUE ( WS )* ';'
            {
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:11: ( WS )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==WS) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:11: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl119); 

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            match(input,SET,FOLLOW_SET_in_set_ttl122); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:19: ( WS )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==WS) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:19: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl124); 

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            match(input,28,FOLLOW_28_in_set_ttl127); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:29: ( WS )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==WS) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:29: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl129); 

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            match(input,17,FOLLOW_17_in_set_ttl132); 

            time=(Token)match(input,VALUE,FOLLOW_VALUE_in_set_ttl136); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:48: ( WS )+
            int cnt9=0;
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==WS) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:48: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl138); 

            	    }
            	    break;

            	default :
            	    if ( cnt9 >= 1 ) break loop9;
                        EarlyExitException eee =
                            new EarlyExitException(9, input);
                        throw eee;
                }
                cnt9++;
            } while (true);


            match(input,FROM,FOLLOW_FROM_in_set_ttl141); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:57: ( WS )+
            int cnt10=0;
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==WS) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:57: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl143); 

            	    }
            	    break;

            	default :
            	    if ( cnt10 >= 1 ) break loop10;
                        EarlyExitException eee =
                            new EarlyExitException(10, input);
                        throw eee;
                }
                cnt10++;
            } while (true);


            name=(Token)match(input,VALUE,FOLLOW_VALUE_in_set_ttl148); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:72: ( WS )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==WS) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:40:72: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl150); 

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            match(input,16,FOLLOW_16_in_set_ttl152); 


              manager.setTtl((name!=null?name.getText():null), (time!=null?time.getText():null));


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "set_ttl"



    // $ANTLR start "set_ttl_sign"
    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:1: set_ttl_sign : ( WS )* SET ( WS )* 'ttlsign' ( WS )* '=' time= VALUE ( WS )+ FROM ( WS )+ name= VALUE ( WS )* ';' ;
    public final void set_ttl_sign() throws RecognitionException {
        Token time=null;
        Token name=null;

        try {
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:14: ( ( WS )* SET ( WS )* 'ttlsign' ( WS )* '=' time= VALUE ( WS )+ FROM ( WS )+ name= VALUE ( WS )* ';' )
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:16: ( WS )* SET ( WS )* 'ttlsign' ( WS )* '=' time= VALUE ( WS )+ FROM ( WS )+ name= VALUE ( WS )* ';'
            {
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:16: ( WS )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==WS) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:16: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl_sign161); 

            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            match(input,SET,FOLLOW_SET_in_set_ttl_sign164); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:24: ( WS )*
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( (LA13_0==WS) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:24: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl_sign166); 

            	    }
            	    break;

            	default :
            	    break loop13;
                }
            } while (true);


            match(input,29,FOLLOW_29_in_set_ttl_sign169); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:38: ( WS )*
            loop14:
            do {
                int alt14=2;
                int LA14_0 = input.LA(1);

                if ( (LA14_0==WS) ) {
                    alt14=1;
                }


                switch (alt14) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:38: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl_sign171); 

            	    }
            	    break;

            	default :
            	    break loop14;
                }
            } while (true);


            match(input,17,FOLLOW_17_in_set_ttl_sign174); 

            time=(Token)match(input,VALUE,FOLLOW_VALUE_in_set_ttl_sign178); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:57: ( WS )+
            int cnt15=0;
            loop15:
            do {
                int alt15=2;
                int LA15_0 = input.LA(1);

                if ( (LA15_0==WS) ) {
                    alt15=1;
                }


                switch (alt15) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:57: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl_sign180); 

            	    }
            	    break;

            	default :
            	    if ( cnt15 >= 1 ) break loop15;
                        EarlyExitException eee =
                            new EarlyExitException(15, input);
                        throw eee;
                }
                cnt15++;
            } while (true);


            match(input,FROM,FOLLOW_FROM_in_set_ttl_sign183); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:66: ( WS )+
            int cnt16=0;
            loop16:
            do {
                int alt16=2;
                int LA16_0 = input.LA(1);

                if ( (LA16_0==WS) ) {
                    alt16=1;
                }


                switch (alt16) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:66: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl_sign185); 

            	    }
            	    break;

            	default :
            	    if ( cnt16 >= 1 ) break loop16;
                        EarlyExitException eee =
                            new EarlyExitException(16, input);
                        throw eee;
                }
                cnt16++;
            } while (true);


            name=(Token)match(input,VALUE,FOLLOW_VALUE_in_set_ttl_sign190); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:81: ( WS )*
            loop17:
            do {
                int alt17=2;
                int LA17_0 = input.LA(1);

                if ( (LA17_0==WS) ) {
                    alt17=1;
                }


                switch (alt17) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:44:81: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_set_ttl_sign192); 

            	    }
            	    break;

            	default :
            	    break loop17;
                }
            } while (true);


            match(input,16,FOLLOW_16_in_set_ttl_sign194); 


              manager.setTtl((name!=null?name.getText():null), (time!=null?time.getText():null));


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "set_ttl_sign"



    // $ANTLR start "config"
    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:48:1: config : ( WS )* CONFIG ( WS )+ SET ( WS )* key= VALUE ( WS )* '=' ( WS )* val= VALUE ( ( WS )+ AND ( WS )+ key= VALUE ( WS )* '=' ( WS )* val= VALUE )* ( WS )* ';' ;
    public final void config() throws RecognitionException {
        Token key=null;
        Token val=null;

        try {
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:48:8: ( ( WS )* CONFIG ( WS )+ SET ( WS )* key= VALUE ( WS )* '=' ( WS )* val= VALUE ( ( WS )+ AND ( WS )+ key= VALUE ( WS )* '=' ( WS )* val= VALUE )* ( WS )* ';' )
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:48:10: ( WS )* CONFIG ( WS )+ SET ( WS )* key= VALUE ( WS )* '=' ( WS )* val= VALUE ( ( WS )+ AND ( WS )+ key= VALUE ( WS )* '=' ( WS )* val= VALUE )* ( WS )* ';'
            {
            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:48:10: ( WS )*
            loop18:
            do {
                int alt18=2;
                int LA18_0 = input.LA(1);

                if ( (LA18_0==WS) ) {
                    alt18=1;
                }


                switch (alt18) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:48:10: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_config203); 

            	    }
            	    break;

            	default :
            	    break loop18;
                }
            } while (true);


            match(input,CONFIG,FOLLOW_CONFIG_in_config206); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:48:21: ( WS )+
            int cnt19=0;
            loop19:
            do {
                int alt19=2;
                int LA19_0 = input.LA(1);

                if ( (LA19_0==WS) ) {
                    alt19=1;
                }


                switch (alt19) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:48:21: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_config208); 

            	    }
            	    break;

            	default :
            	    if ( cnt19 >= 1 ) break loop19;
                        EarlyExitException eee =
                            new EarlyExitException(19, input);
                        throw eee;
                }
                cnt19++;
            } while (true);


            match(input,SET,FOLLOW_SET_in_config211); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:48:29: ( WS )*
            loop20:
            do {
                int alt20=2;
                int LA20_0 = input.LA(1);

                if ( (LA20_0==WS) ) {
                    alt20=1;
                }


                switch (alt20) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:48:29: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_config213); 

            	    }
            	    break;

            	default :
            	    break loop20;
                }
            } while (true);



            Map<String, String> configMap = new HashMap<String,String>();


            key=(Token)match(input,VALUE,FOLLOW_VALUE_in_config220); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:51:11: ( WS )*
            loop21:
            do {
                int alt21=2;
                int LA21_0 = input.LA(1);

                if ( (LA21_0==WS) ) {
                    alt21=1;
                }


                switch (alt21) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:51:11: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_config222); 

            	    }
            	    break;

            	default :
            	    break loop21;
                }
            } while (true);


            match(input,17,FOLLOW_17_in_config225); 

            // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:51:19: ( WS )*
            loop22:
            do {
                int alt22=2;
                int LA22_0 = input.LA(1);

                if ( (LA22_0==WS) ) {
                    alt22=1;
                }


                switch (alt22) {
            	case 1 :
            	    // /Users/apple/git/game-redisproxy/src/main/java/sky/redis/antlr/redisql_sky.g:51:19: WS
            	    {
            	    match(input,WS,FOLLOW_WS_in_config227); 

            	    }
            	    break;

            	default :
            	    break loop22;
                }
            } while (true);


            val=(Token)match(input,VALUE,FOLLOW_VALUE_in_config232); 


            configMap.put((key!=null?key.getText():null), (val!=null?val.getText():null));

